# rust_freeverb

./: Cargo.toml  README.md
audio_module/: Cargo.toml
audio_module/src/: lib.rs  parameters.rs  widget.rs
freeverb/: Cargo.toml
freeverb/src/: comb.rs  freeverb.rs  freeverb_module.rs  lib.rs
freeverb_egui/: Cargo.toml
freeverb_egui/src/: jackprocess.rs  lib.rs  main.rs
freeverb_lv2/: Cargo.toml
freeverb_lv2/freeverb.lv2/: freeverb_lv2.ttl  manifest.ttl
freeverb_lv2/src/: lib.rs
freeverb_module/: Cargo.toml
freeverb_module/src/: lib.rs
plugin_host/: Cargo.toml
plugin_host/src/: lib.rs  main.rs  main_test.rs
src/: all_pass.rs  comb.rs  delay_line.rs  freeverb.rs  lib.rs
