[package]
name = "freeverb_egui"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "freeverb_lib"
path = "src/lib.rs"

[[bin]]
name = "freeverb_egui"
path = "src/main.rs"

[dependencies]
audio_module = { version = "0.1.0", path="../audio_module" }
freeverb_module = { version = "0.1.0", path="../freeverb_module" }
eframe = { version = "0.31.0" }
scan_fmt = "0.2.6"
jack = { version = "0.11.4" }
crossbeam-channel = { version = "0.5.8" }
bus = { version = "2.4.1" }
